test/compile-fail/resolution/use/ambiguous-entry-child/expected.txt
error: `a` is ambiguous (crate or mod versus other crate or mods found during resolution)
  ┌─ ./test/compile-fail/resolution/use/ambiguous-entry-child/top.rhdl:8:5
  │
8 │ use a::b;
  │     ^ ambiguous name
  │
  = rename other crate or mods with the same name

error[E0428]: the name `a` is defined multiple times
  ┌─ ./test/compile-fail/resolution/use/ambiguous-entry-child/top.rhdl:1:5
  │
1 │ mod a {
  │     - previous definition of the name `a` here
  ·
4 │ mod a {
  │     ^ `a` redefined here

